<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_consultas"
            android:icon="@drawable/ic_foot_massage"
            android:title="@string/consultas">
        </item>

        <item
            android:id="@+id/nav_treinos"
            android:icon="@drawable/ic_workout_1"
            android:title="@string/treinos">
        </item>

        <item android:title="">
            <menu>
                <item android:id="@+id/nav_user_profile"
                    android:icon="@drawable/ic_dumbbell"
                    android:title="@string/perfil" />

                <item android:id="@+id/nav_options"
                    android:icon="@drawable/ic_workout"
                    android:title="@string/options" />

                <item android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_foot_massage"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>

</menu>