<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.InicialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btConsultas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_ir_consultas" />

        <Button
            android:id="@+id/btTreinos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_ir_treinos" />

        <Button
            android:id="@+id/btIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_calcular_imc" />
    </LinearLayout>
</FrameLayout>