<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".vistas.DetalhesConsultaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumDetalheTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_consulta"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvNumConsultaDetalhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="TextView" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDataConsultaDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvTerapeutaDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvDescricaoConsultaDetalhe"
            android:layout_width="match_parent"
            android:layout_height="63dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recomendacoes"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvRecomendacoesDetalhe"
            android:layout_width="match_parent"
            android:layout_height="63dp" />
    </LinearLayout>

</LinearLayout>


